k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telecom-billing-svc
  namespace: telecom-billing
  labels:
    app: telecom-billing
spec:
  selector:
    app: telecom-billing
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
